--- a/css/styles.css
+++ b/css/styles.css
@@ -298,7 +298,7 @@ top: 0}
     opacity: 0;
 }
 .infovenn2 h3:nth-child(3),.infovenn1 p:nth-child(3) {
-    top: -1.3vw;
+    top: -1.35vw;
     -webkit-animation-delay: 3s;
     -moz-animation-delay: 3s;
     -ms-animation-delay: 3s;
@@ -306,7 +306,7 @@ top: 0}
     animation-delay: 3s;
 }
 .infovenn2 h3:nth-child(4),.infovenn1 p:nth-child(4) {
-    top: -2.6vw;
+    top: -2.7vw;
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -ms-animation-delay: 6s;
@@ -464,12 +464,31 @@ top: 0}
     text-align: center;
     margin-top: 6vw;
 }
-/*-- DIGITAL SELF HARM --------------------------------------*/
-.mobi {
-   display: none; 
+#a_poster1, #a_poster2 {
+    height: 45vw;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-bottom: 5vw;
 }
+#a_poster1 {
+    background-image: url(../images/ASHLAR/a_poster1.jpg);
+}
+#a_poster2 {
+    background-image: url(../images/ASHLAR/a_poster2.jpg);
+}
+#ashlarassets h4{
+    margin-bottom: 8vw;
+}
+#ashalpha {
+    margin-top: 6vw;
+    margin-bottom: 10vw;
+}
+
+/*-- DIGITAL SELF HARM --------------------------------------*/
 #dshimg {
     margin-top: 0vw;
+    margin-bottom: 8vw;
 }
 #dshimg h3 {
     margin-top: 1vw;
@@ -519,8 +538,8 @@ top: 0}
     h2 {font-size: 3.733vw;}
     h3, p, nav h3, nav p, h4 {font-size: 2.933vw; line-height: 3.467vw;} --*/
     
-    h2, h4 {font-size: 4.4vw; line-height: 5.7vw;}
-    h3, p, nav h3, nav p{font-size: 3.1vw; line-height: 4.2vw;} 
+    h2 {font-size: 4.4vw; line-height: 5.7vw;}
+    h3, p, nav h3, nav p, h4{font-size: 3.1vw; line-height: 4.2vw;} 
     h5 {font-size: 6vw;}
     nav h3 {line-height: inherit}
     .assets {
@@ -528,6 +547,13 @@ top: 0}
         padding-right: 1rem;
     }
     nav p{margin-top: 0.68vw;}
+    #indexnav {
+        mix-blend-mode: exclusion;
+    }
+    nav{
+        mix-blend-mode: normal;
+        background-color: #2D2D2D;
+    }
 /* -- index -- */
     .index1 h1 {font-size: 2.6vw;}
     .index1 br {display: none;}
@@ -550,7 +576,7 @@ top: 0}
         display: none;
     }
     .prefoot {
-        top: 10.6vw;
+        top: 10.2vw;
         padding-left: 1rem;
         padding-right: 1rem;
         line-height: 0;
@@ -564,7 +590,9 @@ top: 0}
         top: 20vw;
     }
     .ftemail h2{
-        padding: 1vw;    
+        font-size: 3.1vw;
+        padding-top: 0.5vw;   
+        padding-bottom: 1.6vw;
     }
 
 
@@ -626,9 +654,6 @@ top: 0}
         margin-top: 22vw; padding: 0;
 }
 /*-- DSH --*/
-    .deski {display: none;}
-    .mobi {display: inherit;
-    margin-bottom: 2vw;}
     #dshvid {
         margin-top: 5vw;
     }
@@ -641,10 +666,22 @@ top: 0}
     #dshp {
         margin-top: 2vw;
     }
+    #dshimg {
+    margin-bottom: 15vw;
+}
 /*-- ASHLAR --*/
     .ashlarlink,.dshlink {
         width: 45vw;
         padding-top: 3.5vw;
+    }
+    #a_poster1, #a_poster2 {
+        height: 60vw;
+    }
+    #ashalpha {
+        margin-bottom: 20vw;
+    }
+    .ashlarlink {
+        padding-bottom: 3vw;
     }
 /*-- MASK --*/
     .maskintrosm {
