--- a/css/styles.css
+++ b/css/styles.css
@@ -1,764 +1,14 @@
-@charset "UTF-8";
-/*-- fonts --------------------------------------*/
-@font-face {
-    font-family: "ortica";
-    src: url(../fonts/ortica-light-webfont.woff);
-    font-weight: 100;
-    font-style: 100;
-}
-@font-face {
-    font-family: "publicsans";
-    src: url(../fonts/publicsans-light-webfont.woff);
-    font-weight: 100;
-    font-style: 100;
-}
-@font-face{
-    font-family: "publicsans";
-    src: url(../fonts/publicsans-light-webfont.woff);
-    font-weight: 100;
-    font-style: italic;
-}
-/*-- fonts END --------------------------------------*/
-/*-- General --------------------------------------*/
 body {
-    animation: load 2s;
-    scroll-behavior: smooth;
-    background: #2D2D2D;
-    margin: 0;
-    font-family: ortica, serif;
-    color: #fff;
-    overflow-x: hidden;
-}
-@keyframes load {
-    0% {opacity: 0}
-    100% {opacity: 1}
-}
-
-a {
-    text-decoration: none;
-    color: #fff;
-}
-a:hover,a h2:hover,a h4:hover, a h5:hover{
-    color: rgba(255,255,255,0.5);
-    transition: 0.3s;
-}
-#nav1 a:hover {
-    opacity: 0.5;
-    transition: 0.3s;
-}
-.ortspan {
-    font-family: ortica, serif;
-}
-h1 {
-    font-family: publicsans, sans-serif;
-    font-weight: 100;
-}
-h2 {
-    font-size: 1.250vw;
-    font-weight: 100;
-    font-family: publicsans, sans-serif;
-    margin: 0
-    
-}
-h3 {
-    font-family: publicsans, sans-serif;
-    font-weight: normal;
-}
-h4 {
-    font-size: 1.250vw;
-    font-family: ortica, serif;
-    margin: 0 0 0.4vw 0;
-    line-height: 1.8vw;
-    font-weight: 100;
-}
-h5 {
-    font-size: 2vw;
-    margin: 0;
-    padding: 0;
-    font-family: publicsans, sans-serif;
-    font-weight: 100;
-}
-
-
-p{
-    font-family: ortica, serif;
-    font-weight: 100;
-}
-h3, p {
-    font-size: 0.972vw;
-    font-weight: 100;
-    line-height: 1.35vw;
-    margin: 0 0 0.5vw 0;
-}
-
-.vimeo {
-    z-index: 0;
-}
-
-/*-- navigation --------------------------------------*/
-nav {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    position: fixed;
-    mix-blend-mode: exclusion;
-    border-bottom: 0.5px solid #fff;
-    width: 100%;
-    top: 0;
-    z-index: 9999;
-    color: #fff;
-}
-nav h3, nav p {
-    font-size: 0.972vw;
-    line-height: 1.250vw;
-    z-index: 9999;
-    color: #fff;
-    padding: 0;
+    background: #000000;
     margin: 0;
 }
-nav p{
-    margin-top: 0.15vw;
-}
-.info {
-    text-align: right;
-}
-/*-- navigation END --------------------------------------*/
 
-/*-- FOOTER --------------------------------------*/
-
-footer {
-    margin-top: 10vw;
+div {
+   margin: auto;
+    width: 50%;
+    
 }
-.prefoot {
-    position: relative;
-    top: 6.25vw;
-    z-index: 99;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    line-height: 0;
-}
-.prefoot_left{
-    text-align: right;
-}
-.prefoot_center {
+p {
+    font-size: 10vw;
     text-align: center;
 }
-
-.footvenn {
-    z-index: -99;
-}
-.leftftvn, .rightftvn, .centerftvn {
-    height: 10vw;
-    width: 40vw;
-    border-radius: 50%;
-    border: 0.5px solid #fff;
-    position: absolute;
-    overflow: hidden;
-    margin-bottom: 3vw;
-}
-.leftftvn {
-    left: 1vw;
-    
-}
-.rightftvn {
-    right: 1vw;
-}
-.centerftvn{
-    left: 30vw;
-    width: 40vw;
-}
-.index2 {
-    position: relative;
-    top: 12vw;
-    font-size: 0.8vw;
-    color: white;
-    text-align: center;
-    width: 100%;
-    bottom: 0;
-    border-top: 0.5px solid #fff;
-}
-.ftemail {
-    position: relative;
-    top: 12vw;
-}
-.ftemail h2 {
-    border-top: 0.5px #fff solid;
-    padding-bottom: 0.5vw;
-    padding-top: 0.2vw;
-    text-align: center;
-}
-
-.simplefooter {
-    margin-top: 5vw;
-}
-.simplefooter .index2, .simplefooter .ftemail {
-top: 0}
-/*-- FOOTER END --------------------------------------*/
-
-/*-------------------------------------- index --------------------------------------*/
-.index1 {
-    font-size: 0.8vw;
-    color: white;
-    text-align: center;
-    mix-blend-mode: exclusion;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    border-top: 0.5px solid #fff;
-}
-
-/*-- index END --------------------------------------*/
-
-
-.blank{
-    margin: 1vh 1vw;
-    overflow: visible;
-    position: fixed;
-}
-
-.project0 {
-    height: 115vh;
-}
-
-/*-- NAV --*/
-
-
-
-
-/*-- Projects --------------------------------------*/
-.project1, .project2, .project3, .project4 {
-    padding: 5vh 0 25vh 0;
-}
-.pr1_img, .pr2_img, .pr3_img, .pr4_img, .pr5_img, .pr6_img{
-    background-size: contain; 
-    background-repeat: no-repeat;
-    background-position: top center;
-    height: 34vw;
-}
-.id_txt1, .id_txt2{
-    color: #fff;
-}
-.id_txt1 p {
-    margin-top: 0.5vw;
-}
-.id_txt1 h3 {
-    margin-top: 0.3vw;
-}
-
-.id_txt2{
-    display: none;
-}
-.pr1_img {
-    background-image: url(../images/SABF/SABF_head.jpg);
-}
-.pr2_img {
-    background-image: url(../images/DSH/DSH_head.jpg);
-}
-.pr3_img {
-    background-image: url(../images/ASHLAR/ASHLAR_head.jpg);
-}
-.pr4_img {
-    background-image: url(../images/MASK/MASK_head.jpg);
-}
-.pr5_img {
-    background-image: url(../comingsoon/metamorphosis_cover.jpg);
-}
-.pr6_img {
-    background-image: url(../comingsoon/iryomw_cover.jpg);
-}
-
-/*-- info --------------------------------------*/
-
-.infovenn {
-    margin-top: 1vw;
-    height: auto;
-}
-.infovenn1,.infovenn2 {
-    text-align: center;
-    padding-top: 24.6vw;
-    padding-bottom: 22vw;
-    width: 50vw;
-    border-radius: 50%;
-    border: 0.5px solid #fff;
-    position: absolute;
-    overflow: hidden;
-}
-.infovenn1 {
-    left: 1vw;
-}
-.infovenn2 {
-    right: 1vw;
-}
-.infovenn1 p {
-    margin-bottom: 0;
-}
-.infovenn2 h3{
-    margin-bottom: 0;
-}
-
-
-.infovenn1 p:nth-child(2), .infovenn1 p:nth-child(3), .infovenn1 p:nth-child(4), .infovenn2 h3:nth-child(2),.infovenn2 h3:nth-child(3),.infovenn2 h3:nth-child(4) {
-    position: relative;
-    -webkit-animation: infotxt 9s infinite;
-    -moz-animation: infotxt 9s infinite;
-    -ms-animation: infotxt 9s infinite;
-    -o-animation: infotxt 9s infinite;
-    animation: infotxt 9s infinite;
-    opacity: 0;
-}
-.infovenn2 h3:nth-child(3),.infovenn1 p:nth-child(3) {
-    top: -1.35vw;
-    -webkit-animation-delay: 3s;
-    -moz-animation-delay: 3s;
-    -ms-animation-delay: 3s;
-    -o-animation-delay: 3s;
-    animation-delay: 3s;
-}
-.infovenn2 h3:nth-child(4),.infovenn1 p:nth-child(4) {
-    top: -2.7vw;
-    -webkit-animation-delay: 6s;
-    -moz-animation-delay: 6s;
-    -ms-animation-delay: 6s;
-    -o-animation-delay: 6s;
-    animation-delay: 6s;
-}
-
-@keyframes infotxt {
-    0% {opacity: 0;}
-    4.15% {opacity: 1}
-    29.15% {opacity: 1}
-    37.45% {opacity: 0}
-    100% {opacity: 0;}
-    
-}
-@-webkit-keyframes infotxt {
-    0% {opacity: 0;}
-    4.15% {opacity: 1}
-    29.15% {opacity: 1}
-    37.45% {opacity: 0}
-    100% {opacity: 0;}
-    
-}
-@-moz-keyframes infotxt {
-    0% {opacity: 0;}
-    4.15% {opacity: 1}
-    29.15% {opacity: 1}
-    37.45% {opacity: 0}
-    100% {opacity: 0;}
-    
-}
-@-ms-keyframes infotxt {
-    0% {opacity: 0;}
-    4.15% {opacity: 1}
-    29.15% {opacity: 1}
-    37.45% {opacity: 0}
-    100% {opacity: 0;}
-    
-}
-@-o-keyframes infotxt {
-    0% {opacity: 0;}
-    4.15% {opacity: 1}
-    29.15% {opacity: 1}
-    37.45% {opacity: 0}
-    100% {opacity: 0;}
-    
-}
-
-
-
-.infoassets {
-    padding-top: 55vw;
-}
-.infoassets p, .infoassets h3 {
-    margin-bottom: 0;
-}
-#ibrac, #ip {
-    float: left;
-}
-#ibrac {
-    font-size: 2.3vw;
-}
-#ip {
-    padding-left: 0.5vw;
-    padding-right: 0.5vw;
-    margin-bottom: 0;
-    margin-top: 0.4vw;
-}
-.infoassets div {
-    margin-bottom: 1vw;
-}
-#info2 {
-    margin-top: 5vw;
-}
-/*--
-.funfact {
-    margin-top: 8vw;
-}
-.funfact h4 {
-    margin-bottom: 4vw;
-} --*/
-
-/*-- info END--------------------------------------*/
-/*-- PLAAAAAAAAAY --------------------------------------*/
-.plstf {
-    margin-top: 8vw;
-}
-.plstf img{
-    margin-bottom: 1vw;
-}
-
-
-
-/*-------------------------------------- CASE STUDIES --------------------------------------*/
-#ctr_txt {
-    margin: 0 0 2.2vw 0;
-}
-.blb {
-    height: auto;
-    margin: 3vw 0 3vw 0;
-    padding: 1vw 0;
-    border-top: solid #fff 0.5px;
-    border-bottom: solid #fff 0.5px;
-}
-.blb div h2 {
-    margin: 0 0 1vw 0 ;
-}
-#blb_h3 {
-    margin: 0.35vw 0 0.4vw 0 ;
-}
-.id_txt1 h3 {
-    margin: 0.4vw 0 0 0;
-}
-.assets {
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    max-width: 2000px
-}
-.assets div {
-    margin-bottom: 4vw;
-}
-/*-- 
-.spacer {
-    height: auto;
-    width: 100%;
-    border-radius: 50%;
-    border: solid 0.5px #fff;
-} --*/
-.introtxt {
-    margin: 2.50vw 0 1.75vw 0;
-}
-#a_txt {
-    margin-bottom: 1vw;
-}
-.assets h2{
-    margin-bottom: 0.5vw;
-}
-
-/*-- SEOUL ART BOOK FAIR --------------------------------------*/
-.SABF_head,.DSH_head,.ASHLAR_head {
-    margin-top: 8vw;
-    max-width: 2000px;
-}
-.brochure {
-    background-color: black;
-}
-/*-- ASHLAR --------------------------------------*/
-.ashlarlink,.dshlink {
-    border: 0.5px solid #fff;
-    border-radius: 50%;
-    width: 15vw;
-    padding-top: 2vw;
-    padding-bottom: 2vw;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 6vw;
-}
-#a_poster1, #a_poster2 {
-    height: 45vw;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin-bottom: 5vw;
-}
-#a_poster1 {
-    background-image: url(../images/ASHLAR/a_poster1.jpg);
-}
-#a_poster2 {
-    background-image: url(../images/ASHLAR/a_poster2.jpg);
-}
-#ashlarassets h4{
-    margin-bottom: 8vw;
-}
-#ashalpha {
-    margin-top: 6vw;
-    margin-bottom: 10vw;
-}
-
-/*-- DIGITAL SELF HARM --------------------------------------*/
-#dshimg {
-    margin-top: 0vw;
-    margin-bottom: 8vw;
-}
-#dshimg h3 {
-    margin-top: 1vw;
-}
-#dshflow {
-    margin-bottom: 4vw;
-}
-#dshflowsm {
-    display: none;
-}
-#dshp{
-    padding-left: 2.5vw;
-}
-#dsh2,#dsh3 {
-    margin-top: 5vw;
-}
-#dsh3 {
-    padding-bottom: 1vw;
-}
-/*-- MASK --------------------------------------*/
-#maskh2, #maskh2last {
-    text-align: center;
-    margin-top: 0.5vw;
-}
-#maskh2last {
-    margin-bottom: 0;
-}
-#maskh2 {
-    margin-bottom: 8vw;
-}
-#maskimg {
-    margin-bottom: 0.5vw;
-}
-.maskintrosm {
-    display: none;
-}
-
-
-
-/* ---------------------- MEDIA QUERIES AHHHHH ---------------------- */
-
-
-/* ---------------------- Phone ---------------------- */
-@media screen and (min-width: 0) and (max-width:500px){
-/* -- main things -- */
-    /*-- 
-    h2 {font-size: 3.733vw;}
-    h3, p, nav h3, nav p, h4 {font-size: 2.933vw; line-height: 3.467vw;} --*/
-    
-    h2 {font-size: 4.4vw; line-height: 5.7vw;}
-    h3, p, nav h3, nav p, h4{font-size: 3.1vw; line-height: 4.2vw;} 
-    h5 {font-size: 6vw;}
-    nav h3 {line-height: inherit}
-    .assets {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
-    nav p{margin-top: 0.68vw;}
-    #indexnav {
-        mix-blend-mode: exclusion;
-        background-color: rgba(0,0,0,0);
-    }
-    nav{
-        mix-blend-mode: normal;
-        background-color: #2D2D2D;
-    }
-/* -- index -- */
-    .index1 h1 {font-size: 2.6vw;}
-    .index1 br {display: none;}
-    .pr1_img, .pr2_img, .pr3_img, .pr4_img, .pr5_img, .pr6_img{height: 45vw; margin-top: 3vh}
-    .project1, .project2, .project3, .project4 {padding: 8vh 0;}
-    .project0 {height: 95vh;}
-/*-- .id_txt2{display: block; padding-top: 1.5vw;}
-    .id_txt1{display: none;} --*/
-    .project4 {margin-bottom: 15vh;}
-    
-/*-- Footer --*/
-    .leftftvn, .rightftvn, .centerftvn {
-        height: 15vw;
-        margin-bottom: 10vw;
-        width: 55vw;
-    }
-    .centerftvn {
-        display: none;
-    }
-    .prefoot_center {
-        display: none;
-    }
-    .prefoot {
-        top: 10.2vw;
-        padding-left: 1rem;
-        padding-right: 1rem;
-        line-height: 0;
-    }
-    .index2 h1 {
-        font-size: 2.6vw;
-    }
-    .index2 {
-        top: 20vw;}
-    .ftemail {
-        top: 20vw;
-    }
-    .ftemail h2{
-        font-size: 3.1vw;
-        padding-top: 0.5vw;   
-        padding-bottom: 1.6vw;
-    }
-
-
-/*-- INFO --*/
-    .infovenn {
-        width: 100vw;
-        overflow-x: hidden;
-        margin: auto 0;
-    }
-    .infovenn1, .infovenn2 {
-        padding-top: 20vw;
-        padding-bottom: 11.6vw;
-        width: 50vw;
-        margin-top: 20vw;
-        height: 18vw;
-    }
-    .infovenn p, .infovenn h3 {
-        width: 40vw;
-        margin: auto;
-        margin-bottom: 0;
-    }
-    .infovenn2 h3:nth-child(3),.infovenn1 p:nth-child(3) {
-        top: -4.2vw;
-    }
-    .infovenn2 h3:nth-child(4),.infovenn1 p:nth-child(4) {
-        top: -8vw;
-    }
-    .infoassets {
-        padding-top: 85vw;
-    }
-    #ibrac {
-    font-size: 7vw;
-    }
-    #info2 div {
-        margin-top: 5vw;
-    }
-    #ip {
-        margin-top: 1.2vw;
-    }
-/* -- Play  -- */
-.plstf {
-    margin-top: 20vw;
-}    
-/* -- Case studies -- */
-    .blb {
-        padding: 5vw 0 10vw 0;
-    }
-    .blb p, .blb h2 {
-        padding-bottom: 4vw;
-    }
-    .assets div {
-        padding: 0.25rem;
-    }
-    .assets p{
-        padding-right: 2.5vw;
-    }
-/*-- SABF --*/
-    .SABF_head,.DSH_head,.ASHLAR_head {
-        margin-top: 22vw; padding: 0;
-}
-/*-- DSH --*/
-    #dshvid {
-        margin-top: 5vw;
-    }
-    #dshflow {
-        display: none;}
-    #dshflowsm {
-        display: block;
-        margin-bottom: 4vw;
-    }
-    #dshp {
-        margin-top: 2vw;
-    }
-    #dshimg {
-    margin-bottom: 15vw;
-}
-/*-- ASHLAR --*/
-    .ashlarlink,.dshlink {
-        width: 45vw;
-        padding-top: 3.5vw;
-    }
-    #a_poster1, #a_poster2 {
-        height: 60vw;
-    }
-    #ashalpha {
-        margin-bottom: 20vw;
-    }
-    .ashlarlink {
-        padding-bottom: 3vw;
-    }
-/*-- MASK --*/
-    .maskintrosm {
-        background-image: url(../images/MASK/cut1.png);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        width: 100%;
-        height: 40vw;
-        display: inherit;
-        margin-bottom: 2vh;
-    }
-    .maskintrolg {
-        display: none;
-    }
-    #maskintro h2 {
-    margin-top: 0;
-    }
-    
-    
-    
-    
-/* ---------------------- Small Tablet ----------------------*/ 
-@media screen and (min-width: 501px) and (max-width:767px){
-    .index1 h1 {font-size: 2.9vw;}
-/*-- Footer --*/
-    .leftftvn, .rightftvn {
-        width: 53vw;
-    }
-    .centerftvn {
-        display: none;
-    }
-    .prefoot_center {
-        display: none;
-    }
-    
-    
-    .dshpng {display: none;}
-}
-
-/* ---------------------- Large Tablet ---------------------- */
-@media screen and (min-width: 768px) and (max-width:1366px){
-    /* -- main things -- */
-    /* -- index -- */
-    .pr1_img, .pr2_img, .pr3_img, .pr4_img, .pr5_img, .pr6_img{height: 35vw;}
-    .index1 h1 {font-size: 1.45vw;}
-    .project1, .project2, .project3, .project4 {padding: 3vh 0;}
-    .project4 {margin-bottom: 15vh;}
-    
-    
-    .dshpng {display: none;}
-
-}
-/* ---------------------- Big Chungus  ---------------------- */
-@media screen and (min-width: 1500px) and (max-width:4000px){
-    /* -- SABF -- */
-    .sabf_print_tix,.sabf_web_tix {
-    background-color: black;
-    height: 29vw;
-    }
-    .assets {
-        
-    }
-}
-    
-    
